force-app/main/default/objects/OrgChartPlus__SM_Intimacy__c/OrgChartPlus__SM_Intimacy__c.object-meta.xml
<CustomObject>
    <description>A measure of intimacy between a customer contact and a sales team member</description>
    <label>Contact Intimacy</label>
    <nameField>
        <displayFormat>OCI-{00000000}</displayFormat>
        <label>Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Intimacies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>