force-app/main/default/objects/OrgChartPlus__SM_Intimacy__c/fields/OrgChartPlus__Contact__c.field-meta.xml
<CustomField>
    <fullName>OrgChartPlus__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Relationship_Intimacies</relationshipName>
    <type>Lookup</type>
</CustomField>