force-app/main/default/objects/OrgChartPlus__SM_Intimacy__c/fields/OrgChartPlus__Intimacy__c.field-meta.xml
<CustomField>
    <fullName>OrgChartPlus__Intimacy__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Intimacy</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>