force-app/main/default/objects/OrgChartPlus__SM_Intimacy__c/fields/OrgChartPlus__TeamMember_Competitor__c.field-meta.xml
<CustomField>
    <fullName>OrgChartPlus__TeamMember_Competitor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TeamMember_Competitor</label>
    <referenceTo>OrgChartPlus__SM_Competitor__c</referenceTo>
    <relationshipLabel>Contact Intimacies</relationshipLabel>
    <relationshipName>Contact_Intimacies</relationshipName>
    <type>Lookup</type>
</CustomField>