force-app/main/default/objects/OrgChartPlus__SM_Intimacy__c/fields/OrgChartPlus__TeamMember_Contact__c.field-meta.xml
<CustomField>
    <fullName>OrgChartPlus__TeamMember_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TeamMember_Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Relationship_IntimaciesTM</relationshipName>
    <type>Lookup</type>
</CustomField>