force-app/main/default/objects/OrgChartPlus__SM_Intimacy__c/fields/OrgChartPlus__TeamMember_NonSFDC__c.field-meta.xml
<CustomField>
    <fullName>OrgChartPlus__TeamMember_NonSFDC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TeamMember_NonSFDC</label>
    <referenceTo>OrgChartPlus__SM_NonSFUser__c</referenceTo>
    <relationshipName>Relationship_Intimacies</relationshipName>
    <type>Lookup</type>
</CustomField>