force-app/main/default/objects/OrgChartPlus__SM_Intimacy__c/fields/OrgChartPlus__TeamMember_User__c.field-meta.xml
<CustomField>
    <fullName>OrgChartPlus__TeamMember_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TeamMember_User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Relationship_Intimacies</relationshipName>
    <type>Lookup</type>
</CustomField>